feat: add deterministic machining run segmentation